--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "esbuild-wasm": "^0.13.12",
     "glob": "^7.2.0",
     "less": "^4.1.2",
+    "mobx": "^6.3.6",
+    "mobx-react": "^7.2.1",
     "shelljs": "^0.8.4"
   }
 }
