--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "esbuild-plugin-less": "^1.1.5",
     "esbuild-wasm": "^0.13.12",
     "glob": "^7.2.0",
+    "ip": "^1.1.5",
     "less": "^4.1.2",
+    "lodash": "^4.17.21",
     "mobx": "^6.3.6",
     "mobx-react": "^7.2.1",
     "shelljs": "^0.8.4"
