--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "antd": "^4.16.13",
+    "axios": "^0.24.0",
     "clsx": "^1.1.1",
+    "d3": "^7.2.0",
     "dayjs": "^1.10.7",
     "lodash": "^4.17.21",
     "mobx": "^6.3.7",
